# Android_GStreamer_RTSP_Server

./: .gitignore  settings.gradle.kts
app/: build.gradle.kts
app/src/androidTest/java/com/geeksloft/rtsp/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  gstreamer-rtsp.cpp
app/src/main/java/com/geeksloft/rtsp/: GstreamerUtil.kt  MainActivity.kt  RTSPServerService.kt
app/src/main/java/com/yong/rtsp/: GstreamerUtil.kt  MainActivity.kt  RTSPServerService.kt
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/geeksloft/rtsp/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
